@@ -27,7 +27,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'modify_tables' => 'tt_content,tt_address,fe_users',
 	'clearcacheonload' => 0,
 	'lockType' => '',
-	'author' => 'Kasper SkÃ¯Â¿Â½rhÃ¯Â¿Â½j',
+	'author' => 'Kasper Skaarhoej',
 	'author_email' => 'kasper@typo3.com',
 	'author_company' => 'Curby Soft Multimedia',
 	'CGLcompliance' => '',
