@@ -35,6 +35,9 @@
             <label index="sys_dmail.HTMLParams"></label>
             <label index="sys_dmail.plainParams"></label>
             <label index="sys_dmail.issent"></label>
+            <label index="sys_dmail.scheduled"></label>
+            <label index="sys_dmail.scheduled_begin"></label>
+            <label index="sys_dmail.scheduled_end"></label>
             <label index="sys_dmail.use_domain"></label>
             <label index="sys_dmail.use_rdct"></label>
             <label index="sys_dmail.long_link_rdct_url"></label>
@@ -108,6 +111,9 @@
             <label index="sys_dmail.HTMLParams">Parameters, HTML:</label>
             <label index="sys_dmail.plainParams">Parameters, Plain text:</label>
             <label index="sys_dmail.issent">Is sent:</label>
+            <label index="sys_dmail.scheduled">Scheduled time:</label>
+            <label index="sys_dmail.scheduled_begin">Delivery start:</label>
+            <label index="sys_dmail.scheduled_end">Delivery end:</label>
             <label index="sys_dmail.use_domain">Domain of internal links:</label>
             <label index="sys_dmail.use_rdct">Redirect links longer than 76 characters:</label>
             <label index="sys_dmail.long_link_rdct_url">Long links redirection url:</label>
@@ -193,35 +199,44 @@
         </languageKey>
         <languageKey index="de" type="array">
             <label index="module_sys_dmail_group.category">Kategorien abonnieren</label>
-            <label index="module_sys_dmail_group.htmlemail">Emails im HTML-Format empfangen?</label>
-            <label index="sys_dmail_category">Direct Mail Kategorie</label>
+            <label index="module_sys_dmail_group.htmlemail">E-Mails im HTML-Format empfangen?</label>
+            <label index="sys_dmail_category">Direct-Mail-Kategorie</label>
             <label index="sys_dmail_category.category">Kategorie</label>
-            <label index="sys_dmail">Direct Mails</label>
+            <label index="sys_dmail">Direct-Mails</label>
             <label index="sys_dmail.subject">Betreff:</label>
             <label index="sys_dmail.page">Seiten senden:</label>
-            <label index="sys_dmail.from_email">Absender E-Mail:</label>
-            <label index="sys_dmail.from_name">Absender Name:</label>
-            <label index="sys_dmail.replyto_email">Antwort E-Mail:</label>
-            <label index="sys_dmail.replyto_name">Antwort Name:</label>
-            <label index="sys_dmail.return_path">Return Pfad:</label>
+            <label index="sys_dmail.from_email">Absender-E-Mail:</label>
+            <label index="sys_dmail.from_name">Absender-Name:</label>
+            <label index="sys_dmail.replyto_email">Antwort-E-Mail:</label>
+            <label index="sys_dmail.replyto_name">Antwort-Name:</label>
+            <label index="sys_dmail.return_path">Return-Path:</label>
             <label index="sys_dmail.organisation">Organisation:</label>
+            <label index="sys_dmail.transfer_encoding">E-Mail-Transferformat (transfer encoding):</label>
+            <label index="sys_dmail.charset">E-Mail-Zeichensatz (character set):</label>
             <label index="sys_dmail.priority">Priorität:</label>
             <label index="sys_dmail.priority.I.0">Niedrig</label>
             <label index="sys_dmail.priority.I.2">Hoch</label>
-            <label index="sys_dmail.sendOptions">Einbinden:</label>
+            <label index="sys_dmail.sendOptions">Format des E-Mails:</label>
             <label index="sys_dmail.sendOptions.I.0">Normaler Text</label>
             <label index="sys_dmail.sendOptions.I.1">HTML</label>
+            <label index="sys_dmail.includeMedia">Bilder und andere Medien im HTML-Format einbinden:</label>
+            <label index="sys_dmail.flowedFormat">Fließendes Format (flowed) im Text-Format verwenden:</label>
             <label index="sys_dmail.HTMLParams">Parameter, HTML:</label>
             <label index="sys_dmail.plainParams">Parameter, normaler Text:</label>
             <label index="sys_dmail.issent">Gesendet:</label>
-            <label index="sys_dmail.long_link_rdct_url">Lange Link-RDCT-URL:</label>
+            <label index="sys_dmail.scheduled">Planzeit:</label>
+            <label index="sys_dmail.scheduled_begin">Versand-Start:</label>
+            <label index="sys_dmail.scheduled_end">Versand-Ende:</label>
+            <label index="sys_dmail.use_rdct">Links länger als 76 Zeichen umleiten (Redirect):</label>
+            <label index="sys_dmail.long_link_rdct_url">Lange Link-Redirect-URL (RDCT):</label>
             <label index="sys_dmail.long_link_mode">Nicht nur Links länger als 76 Zeichen, sondern ALLE Links:</label>
-            <label index="sys_dmail.renderedsize">Übertragungsgrösse:</label>
+            <label index="sys_dmail.renderedsize">Übertragungsgröße:</label>
             <label index="sys_dmail.attachment">Anhänge:</label>
-            <label index="sys_dmail.type.I.0">TYPO3 Seite</label>
+            <label index="sys_dmail.type.I.0">TYPO3-Seite</label>
             <label index="sys_dmail.type.I.1">Externe URL</label>
             <label index="sys_dmail.plainParams.ALT.1">URL für normalen Text:</label>
             <label index="sys_dmail.HTMLParams.ALT.1">URL für HTML-Inhalt:</label>
+            <label index="sys_dmail.authcode_fieldList">Für die Authentifizierung verwendete Felder:</label>
             <label index="sys_dmail_group">Versandgruppe</label>
             <label index="sys_dmail_group.type.I.0">Von Seiten</label>
             <label index="sys_dmail_group.type.I.1">Normale Liste</label>
@@ -232,7 +247,7 @@
             <label index="sys_dmail_group.mail_groups">Andere Versandgruppen:</label>
             <label index="sys_dmail_group.whichtables">Tabellen:</label>
             <label index="sys_dmail_group.whichtables.I.0">Adresse</label>
-            <label index="sys_dmail_group.whichtables.I.1">Website Benutzer</label>
+            <label index="sys_dmail_group.whichtables.I.1">Website-Benutzer</label>
             <label index="sys_dmail_group.whichtables.I.2">Benutzerdefinierte Tabelle</label>
             <label index="sys_dmail_group.list">Empfänger:</label>
             <label index="sys_dmail_group.csv.I.0">Trennung der Emails durch Leerzeichen/Kommata/Zeilenumbruch</label>
@@ -318,7 +333,7 @@
             <label index="sys_dmail.sendOptions.I.0">Testo semplice</label>
             <label index="sys_dmail.sendOptions.I.1">HTML</label>
             <label index="sys_dmail.HTMLParams">Parametri HTML:</label>
-            <label index="sys_dmail.plainParams">Parametri testo ASCI:</label>
+            <label index="sys_dmail.plainParams">Parametri testo ASCII:</label>
             <label index="sys_dmail.issent">Inviato:</label>
             <label index="sys_dmail.long_link_rdct_url">Long link RDCT url:</label>
             <label index="sys_dmail.long_link_mode">Non solo link più lunghi di 76 caratteri, ma TUTTI i link:</label>
@@ -385,6 +400,9 @@
             <label index="sys_dmail.HTMLParams">Paramètres, HTML:</label>
             <label index="sys_dmail.plainParams">Paramètres, Texte simple:</label>
             <label index="sys_dmail.issent">Est envoyé:</label>
+            <label index="sys_dmail.scheduled">Envoi déclenché</label>
+            <label index="sys_dmail.scheduled_begin">Envoi initié</label>
+            <label index="sys_dmail.scheduled_end">Envoi complété</label>
             <label index="sys_dmail.use_domain">Domaine des liens internes:</label>
             <label index="sys_dmail.use_rdct">Rediriger les liens de plus de 76 caractères de longueur:</label>
             <label index="sys_dmail.long_link_rdct_url">Url de redirection des liens longs:</label>
@@ -435,6 +453,9 @@
             <label index="sys_dmail.HTMLParams">Parámetros, HTML:</label>
             <label index="sys_dmail.plainParams">Parámetros, texto simple:</label>
             <label index="sys_dmail.issent">Enviado:</label>
+            <label index="sys_dmail.scheduled">Envío requerido</label>
+            <label index="sys_dmail.scheduled_begin">Envío iniciado</label>
+            <label index="sys_dmail.scheduled_end">Envío completado</label>
             <label index="sys_dmail.long_link_rdct_url">Url de vínculo RDCT:</label>
             <label index="sys_dmail.long_link_mode">No solo vínculos más extensos de 76 caracteres sino TODOS los vínculos:</label>
             <label index="sys_dmail.renderedsize">Tamaño compilado:</label>
@@ -489,6 +510,9 @@
             <label index="sys_dmail.HTMLParams">Parameters, HTML:</label>
             <label index="sys_dmail.plainParams">Parameters, Plain tekst:</label>
             <label index="sys_dmail.issent">Is verzonden:</label>
+            <label index="sys_dmail.scheduled">Gepland</label>
+            <label index="sys_dmail.scheduled_begin">Aflevering begonnen</label>
+            <label index="sys_dmail.scheduled_end">Aflevering beëindigd</label>
             <label index="sys_dmail.long_link_rdct_url">Lange link RDCT url:</label>
             <label index="sys_dmail.long_link_mode">Niet alleen links langer dan 76 karackters, maar ALLE links:</label>
             <label index="sys_dmail.renderedsize">Gecompileerde grootte:</label>
@@ -700,7 +724,10 @@
             <label index="sys_dmail.sendOptions.I.1">HTML</label>
             <label index="sys_dmail.HTMLParams">Muuttujat, HTML:</label>
             <label index="sys_dmail.plainParams">Muuttujat, pelkkä teksti:</label>
-            <label index="sys_dmail.issent">Lähetetty:</label>
+            <label index="sys_dmail.issent">Lähetetty:</label>>
+            <label index="sys_dmail.scheduled">Aikautettu</label>
+            <label index="sys_dmail.scheduled_begin">Jakelu alkoi</label>
+            <label index="sys_dmail.scheduled_end">Jakelu päättyi</label>
             <label index="sys_dmail.long_link_rdct_url">Pitkä linkki RDCT url:</label>
             <label index="sys_dmail.long_link_mode">Kaikki linkit, myös alle 76 merkkiset:</label>
             <label index="sys_dmail.renderedsize">Käsitelty koko:</label>
@@ -809,6 +836,9 @@
             <label index="sys_dmail.HTMLParams">Parãmetros, HTML:</label>
             <label index="sys_dmail.plainParams">Parâmetros, Texto simples:</label>
             <label index="sys_dmail.issent">Foi enviado:</label>
+            <label index="sys_dmail.scheduled">Agendado</label>
+            <label index="sys_dmail.scheduled_begin">Envio começou em</label>
+            <label index="sys_dmail.scheduled_end">Envio terminou em</label>
             <label index="sys_dmail.long_link_rdct_url">RDCT url p/ links longos:</label>
             <label index="sys_dmail.long_link_mode">Não somente links maiores de 76 caracteres mas TODOS os links:</label>
             <label index="sys_dmail.renderedsize">Tamanho compilado:</label>
